--- a/app/src/main/res/layout/activity_photos.xml
+++ b/app/src/main/res/layout/activity_photos.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.codingblocks.restapiretrofitjson.activities.TodosActivity">
+    android:columnCount="5"
+    android:orientation="vertical">
+
     <TextView
         android:id="@+id/activity_Title"
         android:layout_width="match_parent"
@@ -14,8 +14,9 @@
         android:text="ACTIVITY TITLE"
         android:textSize="25sp"
         android:textStyle="bold|italic" />
+
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvTodosList"
+        android:id="@+id/photo_rv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="10">
