--- a/app/src/main/res/layout/activity_users.xml
+++ b/app/src/main/res/layout/activity_users.xml
@@ -11,12 +11,21 @@
         android:text="Show All Posts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/activity_Title"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:gravity="center"
+        android:text="ACTIVITY TITLE"
+        android:textSize="25sp"
+        android:textStyle="bold|italic" />
 
     <android.support.v7.widget.RecyclerView
-        android:layout_marginBottom="40dp"
         android:id="@+id/rvUserList"
+        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="435dp"
+        android:layout_marginBottom="40dp">
 
     </android.support.v7.widget.RecyclerView>
 
